--- a/static/index.html
+++ b/static/index.html
@@ -31,8 +31,8 @@ var context = canvas.getContext("2d");
 var W = canvas.width  = window.innerWidth-6;
 var H = canvas.height = window.innerHeight-50;
 
-
-function sendJSONXMLHTTPRequest(url, objects, callback) {
+// Referenced https://javascript.info/xmlhttprequest
+function sendJSONXMLHTTPRequest(method, url, objects, callback) {
     var xhr = new XMLHttpRequest();
     xhr.onreadystatechange = function () {
         if (xhr.readyState==4) {
@@ -40,6 +40,9 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
                 if (xhr.status==200) {
                     //XXX: parse some JSON from the request!
                     //XXX: Pass the data to the callback!
+                    let responseJSON = JSON.parse(xhr.response);
+                    callback(responseJSON) // Referenced https://javascript.info/callbacks
+                    
                 }
             } 
             catch(e) {
@@ -48,8 +51,14 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
         }
     };
     //XXX: POST to a URL
-    //XXX: set the mimetype and the accept headers!
-    // Remember to use application/json !
+    xhr.open(method, url)
+    if (method !== 'GET'){
+        //XXX: set the mimetype 
+        xhr.setRequestHeader('Content-Type', 'application/json');
+    }
+    //and the accept headers!
+    xhr.setRequestHeader('Accept', 'application/json');
+    xhr.send(JSON.stringify(objects)); // Referenced https://www.w3schools.com/js/js_json_stringify.asp
 }
 
 
@@ -83,7 +92,7 @@ function prepEntity(entity) {
 function clearFrame() {
     with(context) {
 	moveTo(0,0);
-	fillStyle = "#000";
+	fillStyle = "#FFF";
 	fillRect(0,0,W,H);
     }
 
@@ -136,15 +145,15 @@ function getPosition(e) {
 
 function addEntity(entity, data) {
     world[entity] = data;
-    drawNextFrame(); // (but should we?)
-    //XXX: Send a XHTML Request that updates the entity you just  modified!
+    //XXX: Send a XHTML Request that updates the entity you just modified!
+    sendJSONXMLHTTPRequest('POST', '/entity/' + entity, data, resp => {});
 
 }
 
 var counter = 0;
 function addEntityWithoutName(data) {
     //var name = "X"+Math.floor((Math.random()*100)+1);
-    var name = "X"+(counter++)%100;
+    var name = "X"+(counter++)%500; // made it so more entities can be on the screen
     addEntity(name,data);
 }
 
@@ -244,24 +253,34 @@ mouse = (function() {
     return self;
 })();
 
+// Taken from https://www.30secondsofcode.org/js/s/random-hex-color-code
+// spits out a random hexadecimal color code
+function getRandomHex(){
+    let n = (Math.random() * 0xfffff * 1000000).toString(16);
+    return '#' + n.slice(0, 6);
+}
 // Add the application specific mouse listeners!
 //XXX: TODO Make these prettier!
 mouse.mousedowners.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'blue'});
+    addEntityWithoutName({'x':x,'y':y,'colour':getRandomHex()});
 });
 
 mouse.mouseuppers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'red'});
+    addEntityWithoutName({'x':x,'y':y,'colour':getRandomHex()});
 });
 
 mouse.mousedraggers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'green',
+    addEntityWithoutName({'x':x,'y':y,'colour':getRandomHex(),
                           'radius':10});
 });
 
 
 function update() {
     //XXX: TODO Get the world from the webservice using a XMLHTTPRequest
+    sendJSONXMLHTTPRequest('GET', '/world', null, resp => {
+        world = resp;
+    });
+    drawNextFrame();
     drawFrame();
 }
 
